--- a/myclash.ini
+++ b/myclash.ini
@@ -1,5 +1,7 @@
 ;1、域名组
 
+ruleset=直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/SteamCN/SteamCN.list
+
 ruleset=AI,https://raw.githubusercontent.com/ARoyalxz/clash/refs/heads/main/AI.list
 ruleset=GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
 ruleset=TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
@@ -11,11 +13,13 @@ ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script
 
 ruleset=国外,https://raw.githubusercontent.com/ARoyalxz/clash/refs/heads/main/Proxy2.list
 ruleset=国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
+ruleset=国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Steam/Steam.list
 
 ruleset=国内,[]FINAL
 
 ;2、策略组（域名组-节点组）
 
+custom_proxy_group=直连`select`[]DIRECT
 custom_proxy_group=AI`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]REJECT
 custom_proxy_group=GitHub`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]REJECT
 custom_proxy_group=TikTok`select`[]DIRECT`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]REJECT
