--- a/myclash.ini
+++ b/myclash.ini
@@ -12,6 +12,7 @@ ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Spotify/Spotify.list
 
 ruleset=国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/YouTube/YouTube.list
+ruleset=国外,https://raw.githubusercontent.com/ARoyalxz/clash/refs/heads/main/Proxy.list
 ruleset=国外,https://raw.githubusercontent.com/ARoyalxz/clash/refs/heads/main/Proxy2.list
 ruleset=国外,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
 
